--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,11 @@
 tasks:
   - name: build
     init: ./gradlew build 
-    command: sync-done build
+    command: gp sync-done build
   - name:  keycloak
     command: gp sync-await build && ./gradlew bootRun
   - name: clients
     command: gp await-port 8080 && ./gradlew :kctest-ktor:run
 ports:
-  - port: 8080
-    onOpen: open-browser
   - port: 9090
     onOpen: open-browser
