--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ tasks:
     command: gp await-port 8080 && ./gradlew :kctest-ktor:run
     openMode: split-right
   - name: keycloak browser
-    command: gp await-port 8080 && gp preview $(gp url 8080)/auth
+    command: gp await-port 8080 && gp preview http://localhost:8080/auth
     openMode: tab-before
 ports:
   - port: 9090
